shared/network-security-group-http-ssh.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "projectPrefix": {
      "type": "string",
      "maxLength": 3,
      "minLength": 2,
      "metadata": {
        "description": "Unique project prefix for resources."
      }
    }
  },
  "variables": {
    "nsgName": "[concat(parameters('projectPrefix'),'-nsg-allow_http_ssh')]"
  },
  "resources": [
    {
      "comments": "Network Security Group",
      "name": "[variables('nsgName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2017-09-01",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHttpAll",
            "properties": {
              "description": "Allow http traffic to web servers",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "direction": "Inbound",
              "access": "Allow",
              "priority": 100,
              "protocol": "Tcp",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "80"
            }
          },
          {
            "name": "AllowSshAll",
            "properties": {
              "description": "Allow SSH traffic to web servers",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "direction": "Inbound",
              "access": "Allow",
              "priority": 200,
              "protocol": "Tcp",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "22"
            }
          }
        ]
      }
    }
  ],
  "outputs": {
    "vmNsgName": {
      "type": "string",
      "value": "[variables('nsgName')]"
    }
  }
}
