shared/network-security-group.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "nsgName": {
        "type": "string",
        "metadata": {
          "description": "Network security group name."
        }
      }
    },
    "variables": {
    },
    "resources": [   
      {
        "comments": "Network Security Group",
        "name": "[parameters('nsgName')]",
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2017-09-01",
        "location": "[resourceGroup().location]",
        "properties": {
          "securityRules": [
            {
              "name": "AllowHttpAll",
              "properties": {
                "description": "Allow http traffic to web servers",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "direction": "Inbound",
                "access": "Allow",
                "priority": 100,
                "protocol": "Tcp",     
                "destinationAddressPrefix": "*",
                "destinationPortRange": "80"
              }
            },
            {
              "name": "AllowSshAll",
              "properties": {
                "description": "Allow SSH traffic to web servers",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "direction": "Inbound",
                "access": "Allow",
                "priority": 200,
                "protocol": "Tcp",                   
                "destinationAddressPrefix": "*",
                "destinationPortRange": "22"
              }
            }
          ]
        }
      }
    ],
    "outputs": {
      "vmNsg": {
          "type": "string",
          "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
      }
    }
  }
